latexsupport: Tweak sstinvocation
Replace \texttt{#1} with {\tt #1} because \texttt{} does not work
if there are blank lines in #1. This happens with the AST documentation
which calls \sstinvocation with a string that includes alternate
invocations separated by blank lines.

--- a/applications/latexsupport/sst.sty
+++ b/applications/latexsupport/sst.sty
@@ -168,7 +168,7 @@
 \newcommand{\sstapplicability}[1]{\sstdiytopic{Applicability}{#1}}
 \newcommand{\sstresparameters}[1]{\sstdiytopic{Results Parameters}{#1}}
 \newcommand{\sstarguments}[1]{\sstdiytopic{Arguments}{#1}}
-\newcommand{\sstinvocation}[1]{\sstdiytopic{Invocation}{\texttt{#1}}}
+\newcommand{\sstinvocation}[1]{\sstdiytopic{Invocation}{{\tt #1}}}
 \newcommand{\sstreturnedvalue}[1]{\sstdiytopic{Returned Value}{#1}}
 \newcommand{\sstimplementation}[1]{\sstdiytopic{Implementation}{#1}}
 
