docs: Invoke ORAC-DR for SCUBA-2 not ACSIS in SC/21.
Spotted by Harriet Parsons.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -189,9 +189,11 @@ The \oracdr\ Data Reduction Pipeline \cite{oracdr} (hereafter just
 \textsc{Orac-dr}) is an automated reduction pipeline. \textsc{Orac-dr} uses
 \smurf\ and \Kappa\ (along with other Starlink tools) to perform an automated
 reduction of the raw data following pre-defined recipes to produce
-calibrated maps.
+calibrated maps.  The following commands initialise \textsc{Orac-dr}
+ready to process 850\,$\mu$m and 450\,$\mu$m data respectively.
 \begin{terminalv}
-% oracdr_acsis
+% oracdr_scuba2_850
+% oracdr_scuba2_450
 \end{terminalv}
 For more information on available recipes and intructions for running the pipeline
 see \cref{Chapter}{sec:pipe}{The SCUBA-2 Pipeline}.
