docs: Couple of minor fixes to SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -125,7 +125,7 @@ continually being funnelled through the CPU.
 For blank-field surveys, data that only use 850\,$\mu$m, or smaller
 regions of the sky you can usefully run the map-maker with less memory
 and 32 to 64\,GB is reasonable depending on the specifics of your data
-set. SMURF is multi-threaded so multiple cores do help although above
+set. \textsc{smurf} is multi-threaded so multiple cores do help although above
 eight cores the price/performance gains tend to drop off.
 
 If you have a very large machine (128\,GB and 24 cores) you can to run
@@ -4745,10 +4745,10 @@ form the basis (on top of \file{dimmconfig.lis} for both
    com.gain_abstol = 5
 \end{terminalv}
 
+\newpage
+\chapter{Configuration-parameter descriptions}
+\label{app:parameters}
+\input{sc21_selected_params.tex}
 
 \end{document}
 
-
-
-
-\end{document}
