--- a/libraries/img/sun160.tex
+++ b/libraries/img/sun160.tex
@@ -1506,7 +1506,7 @@ command is described more fully in \xref{SUN/144}{sun144}{}.
       data with a data type of DOUBLE PRECISION, the subroutine that you
       should call is IMG\_IN1D.
    }
-   \sstinvocation{ \vspace{1ex} \\
+   \sstinvocation{
       CALL IMG\_IN( PARAM, NX, NY, IP, STATUS ) \\
       CALL IMG\_IN1[x]( PARAM, NX, IP, STATUS ) \\
       CALL IMG\_IN2[x]( PARAM, NX, NY, IP, STATUS ) \\
@@ -1631,7 +1631,7 @@ command is described more fully in \xref{SUN/144}{sun144}{}.
       data with a data type of DOUBLE PRECISION, the subroutine that you
       should call is IMG\_MOD3D.
    }
-   \sstinvocation{ \vspace{1ex} \\
+   \sstinvocation{
       CALL IMG\_MOD( PARAM, NX, NY, IP, STATUS ) \\
       CALL IMG\_MOD1[x]( PARAM, NX, IP, STATUS ) \\
       CALL IMG\_MOD2[x]( PARAM, NX, NY, IP, STATUS ) \\
@@ -1772,7 +1772,7 @@ command is described more fully in \xref{SUN/144}{sun144}{}.
       is IMG\_NEW3I.
 
    }
-   \sstinvocation{ \vspace{1ex} \\
+   \sstinvocation{
       CALL IMG\_NEW( PARAM, NX, NY, IP, STATUS ) \\
       CALL IMG\_NEW1[x]( PARAM, NX, IP, STATUS ) \\
       CALL IMG\_NEW2[x]( PARAM, NX, NY, IP, STATUS ) \\
@@ -1911,7 +1911,7 @@ command is described more fully in \xref{SUN/144}{sun144}{}.
       data with a data type of INTEGER, the subroutine that you should call
       is IMG\_TMP3I.
    }
-   \sstinvocation{ \\
+   \sstinvocation{
       CALL IMG\_TMP( PARAM, NX, NY, IP, STATUS )\\
       CALL IMG\_TMP1[x]( PARAM, NX, IP, STATUS )\\
       CALL IMG\_TMP2[x]( PARAM, NX, NY, IP, STATUS )\\
